<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDo</string>
    <string name="icon_add_new_task_content_description">Icon Add</string>
    <string name="icon_edit_task_content_description">Icon Edit</string>
    <string name="icon_check_task_content_description">Icon Check Task</string>
    <string name="icon_delete_task_content_description">Icon Delete</string>
    <string name="todo_list_title">To Do List</string>
    <string name="enter_task_title_hint">Enter Task Title</string>
    <string name="add_new_task_text">Add New Task</string>
    <string name="enter_task_description_hint">Enter Task Description …</string>
    <string name="select_date_of_task_hint">Select Date Of Task</string>
    <string name="select_time_of_task_hint">Select Time Of Task</string>
    <string name="add_text_in_button">Add</string>
    <string name="required">Required</string>
    <string name="select_date_because_it_s_required">Select Date Because it\'s Required</string>
    <string name="select_time_because_it_s_required">Select Time Because it\'s Required</string>
    <string name="list_title_icon">List Icon</string>
    <string name="language_title_icon">Language Icon</string>
    <string name="mode_title_icon">Mode Icon</string>
    <string name="edit_task_text">Edit Task</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="select_date_hint">Select Date</string>
    <string name="select_time_hint">Select Time</string>
    <string name="save_changes_text_in_button">Save Changes</string>
    <string name="edit_text_in_button">Edit</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="logo_todo_content_description">Logo ToDo</string>
    <string name="logo_route_content_description">Logo Route</string>
</resources>